Css fixed (jinx, scrollbar, layout)

--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,6 @@ body {
     background-image: url("images/f9d7af29e8b87e7bdbc81609503036d1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
 }
 main{
     position:relative;
@@ -371,9 +370,9 @@ teacher_li li{
 
 .main_spells h4{
     position:absolute;
-    top:50%;
-    left:35%;
-    transform:translateX(-50%);
+    top:25.5%;
+    left:0%;
+    transform:translate(105%, 400%);
     color:black;
     text-shadow:none;
     font-size: 3rem;
@@ -385,23 +384,24 @@ teacher_li li{
     border:none;
     font-size:3rem;
     position:absolute;
-    top:66%;
-    left:35%;
+    top:25.5%;
+    left:0%;
+    transform:translate(75%, 350%);
     width: 28%;
-    transform:translate(-50%);
     color:black;
 }
 
 .spells_types_list{
     position:absolute;
-    top:56%;
-    left:22%;
+    top:25.5%;
+    left:0%;
+    transform:translate(85%, 25vw);
     color:black;
     text-shadow:none;
     font-size: 2.5rem;
     display: flex;
     flex-direction: column;
-    height: 30%;
+    height: 25vw;
     width: 26%;
 }
 
@@ -424,17 +424,34 @@ teacher_li li{
 .spells_list {
     display:flex;
     flex-direction: column;
-    overflow:scroll;
-    height:30%;
+    overflow:auto;
+    height:30vw;
     width: 26%;
     position:absolute;
-    top:56%;
-    left:50%;
+    top:25.5%;
+    left:0%;
+    transform:translate(195%, 22vw);
     text-shadow:none;
 }
 
+.spells_list::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: none;
+}
+
+.spells_list::-webkit-scrollbar{
+	width: 2%;
+	background-color: none;
+}
+
+.spells_list::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: black;
+}
+
 .spells_list_item{
-    flex: 1;
     display: grid;
     grid-template-columns: 2fr 1fr 3fr;
     grid-gap: 2%;
@@ -451,8 +468,9 @@ teacher_li li{
     position: absolute;
     grid-template-columns: 2fr 1fr 3fr;
     grid-gap: 2%;
-    left: 50%;
-    top: 51%; 
+    top:25.5%;
+    left:0%;
+    transform:translate(195%, 19vw);
     width: 26%;
 }
 
